--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,6 +4,14 @@ server {
         root /usr/share/nginx/html;
         try_files $uri $uri/redoc.html;
     }
+
+    location /api/ {
+        proxy_set_header Host $host;
+        proxy_set_header        X-Forwarded-Host $host;
+        proxy_set_header        X-Forwarded-Server $host;
+        proxy_pass http://host.docker.internal:8000/api/;
+    }    
+    
     location / {
         root /usr/share/nginx/html;
         index  index.html index.htm;
