--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ coreapi==2.3.3
 coreschema==0.0.4
 cryptography==41.0.4
 defusedxml==0.7.1
+
+django-cors-headers==3.13.0
+psycopg2-binary==2.9.3
+
 Django==3.2.16
 django-colorfield==0.7.2
 django-filter==22.1
