--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -16,7 +16,7 @@ services:
     env_file: .env
     volumes:
       - static_volume:/backend_static
-      - media:/media
+      - media:/app/media
   frontend:
     image: hazik383/foodgram_frontend
     env_file: .env
