--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,6 @@ name: Main Foodgram workflow
 
 on:
   push:
-    branches:
-      - master
 
 jobs:
   
@@ -91,6 +89,7 @@ jobs:
       - build_and_push_to_docker_hub
       - build_frontend_and_push_to_docker_hub
       - build_gateway_and_push_to_docker_hub
+    if: github.ref == 'refs/heads/main'
     steps:
       - name: Checkout repo
         uses: actions/checkout@v3
@@ -129,4 +128,7 @@ jobs:
         with:
           to: ${{ secrets.TELEGRAM_TO }}
           token: ${{ secrets.TELEGRAM_TOKEN }}
-          message: Деплой успешно выполнен!
+          message: |
+            Деплой успешно выполнен!
+            Автор "${{ github.actor }}"
+            Коммит "${{ github.event.commits[0].message }}"
