--- a/foodgram_backend/requirements.txt
+++ b/foodgram_backend/requirements.txt
@@ -20,6 +20,9 @@ djoser==2.1.0
 drf-extra-fields==3.4.0
 idna==3.4
 itypes==1.2.0
+
+gunicorn==20.1.0
+
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 oauthlib==3.2.2
